python_src/tests/negative/types/tc_conditional.yvr
i: INT
i = 10
if i goto L
LABEL L: i = 10